--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,18 +5,29 @@ $color4: yellow;
 
 $mainfont: 'Cabin', sans-serif;
 
+@mixin insidepage {
+    width: 90vw;
+    margin: 2% auto;
+    padding: 0 10px;
+    background-color: rgba(255,255,255,.3);
+}
+
 @import './home';
 @import './auth';
 @import './editor';
+@import './videopage';
+@import './admin';
 
 body {
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
 }
 
 #mainContainer {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     background-image: url('/img/main_bg.jpg');
     background-size: cover;
     background-attachment: fixed;
