--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@ body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    font-family: $mainfont;
 }
 
 #mainContainer {
@@ -52,6 +53,10 @@ body {
                 img {
                     height: 55px;
                     width: auto;
+
+                    &:hover {
+                        cursor: pointer;
+                    }
                 }
             }
             #nav_buttons {
