--- a/src/scss/videopage.scss
+++ b/src/scss/videopage.scss
@@ -79,4 +79,9 @@
             margin: 10px;
         }
     }
+    #comment_editor {
+        width: 50vw;
+        height: 100px;
+        margin: 0 auto;
+    }
 }
