--- a/src/scss/videopage.scss
+++ b/src/scss/videopage.scss
@@ -57,7 +57,6 @@
     #video_text {
         width: 60%;
         margin-top: 25px;
-        margin-bottom: 100px;
         font-size: 16px;
 
         @media (max-width: 900px) {
@@ -77,6 +76,27 @@
             text-align: center;
             font-size: 20px;
             margin: 10px;
+        }
+    }
+    #comment_section {
+        width: 60%;
+
+        @media (max-width: 900px) {
+            width: 90%;
+        }
+        @media (max-width: 600px) {
+            width: 99%;
+        }
+        #comment_header {
+            font-size: 22px;
+            text-align: left;
+        }
+        .comment-name {
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .comment-main {
+            margin-bottom: 15px;
         }
     }
     #comment_editor {
