--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,8 @@
 $color1: #f9f9f9;
 $color2: #ccc;
-$color3: orange;
+$color3: salmon;
 $color4: yellow;
+$darkText: #222;
 
 $mainfont: 'Cabin', sans-serif;
 
@@ -40,66 +41,24 @@ body {
     background-size: cover;
     background-attachment: fixed;
 
-    .nav-wrapper-one {
-        padding-right: 5px;
+    .navbar {
+        background-color: $color3;
+        margin-bottom: 0;
+        border: 0;
 
-        .brand-logo {
-            margin-top: 7px;
-
-            @media (max-width: 650px) {
-                margin-top: 10px;
-            }
-            @media (max-width: 992px) {
-                transform: none;
-                left: 0;
-            }
-
-            img {
-                height: 50px;
-                width: auto;
-
-                @media (max-width: 650px) {
-                    height: 40px;
-                }
-            }
-        }
-    }
-    .nav-wrapper-two {
-        background-color: #f7f7f7;
-        color: #222;
-
-        .center {
-            display: flex;
-            justify-content: center;
-
+        ul {
             li {
-                margin: auto 20px;
                 a {
-                    color: #222;
+                    color: $color1;
                 }
-            }
-        }
-    }
 
-    #cta_container {
-        margin-top: 70px;
-        background-color: #f7f7f7;
-        width: 100%;
-        padding: 30px;
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: space-between;
+                &:hover {
+                    cursor: pointer !important;
 
-        .cta-box {
-            max-width: 350px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            img {
-                width: 95%;
-                height: auto;
-                margin: 10px auto;
+                    a {
+                        color: $darkText;
+                    }
+                }
             }
         }
     }
