--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,17 +6,25 @@ $darkText: #222;
 
 $mainfont: 'Cabin', sans-serif;
 $navHeight: 60px;
+$footerHeight: 150px;
 
 @mixin insidepage {
-    width: 90vw;
-    margin: 2% auto;
-    padding: 0 10px;
-    background-color: rgba(255,255,255,.3);
+    width: 100%;
+    min-height: calc(100vh - $navHeight - $footerHeight);
+    padding: 10px 50px;
+    background-color: $color1;
+    background-image: url("/img/tree_bg.jpg");
 
+    @media (max-width: 767px) {
+        padding: 10px 30px;
+    }
+    @media (max-width: 500px) {
+        padding: 10px;
+    }
     h1 {
-        text-align: center;
-        margin-bottom: 0;
         width: 100%;
+        text-align: center;
+        font-size: 36px;
     }
 }
 
@@ -37,7 +45,6 @@ body {
 #mainContainer {
     width: 100vw;
     height: 100%;
-    min-height: 100vh;
     background-image: url('/img/main_bg.jpg');
     background-size: cover;
     background-attachment: fixed;
@@ -90,16 +97,12 @@ body {
                         align-items: center;
                     }
 
-                    a {
-                        color: $color1;
-                    }
-
                     &:hover {
                         cursor: pointer !important;
-
-                        a {
-                            color: $darkText;
-                        }
+                        background-color: transparentize($color1, 0.8) / fade-out($color1, 0.8);
+                    }
+                    a {
+                        color: $color1;
                     }
                 }
             }
@@ -107,7 +110,7 @@ body {
     }
     #footer {
         width: 100%;
-        height: 150px;
+        height: $footerHeight;
         background-color: $color3;
         color: $color1;
         text-align: center;
