made component for auth form buttons

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@ $footerHeight: 150px;
     padding: 10px 50px;
     background-color: $color1;
     background-image: url("/img/tree_bg.jpg");
+    font-size: 16px;
 
     @media (max-width: 767px) {
         padding: 10px 30px;
