--- a/src/scss/videopage.scss
+++ b/src/scss/videopage.scss
@@ -67,10 +67,6 @@
         }
         p {
             margin: 5px;
-            -webkit-margin-before: 0;
-            -webkit-margin-after: 0;
-            -webkit-margin-start: 0;
-            -webkit-margin-end: 0;
         }
         h2 {
             text-align: center;
@@ -80,6 +76,7 @@
     }
     #comment_section_container {
         width: 60%;
+        padding: 0;
 
         @media (max-width: 900px) {
             width: 90%;
@@ -88,8 +85,11 @@
             width: 99%;
         }
         #comment_header {
-            font-size: 22px;
+            margin-top: 50px;
+            font-size: 26px;
+            font-weight: bold;
             text-align: left;
+            text-decoration: underline;
         }
         .comment-date {
             display: inline-block;
@@ -104,9 +104,36 @@
             margin-bottom: 15px;
         }
     }
-    #comment_editor {
-        width: 50vw;
-        height: 100px;
-        margin: 0 auto;
+    #comment_editor_container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        #add_comment {
+            align-self: flex-start;
+            margin-top: 50px;
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+        #comment_editor {
+            width: 100%;
+            height: 100px;
+            margin: 0 auto;
+        }
+
+        .link {
+            color: blue;
+
+            &:hover {
+                cursor: pointer;
+                text-decoration: underline;
+            }
+        }
+
+        button {
+            margin-top: 10px;
+            align-self: flex-end;
+        }
     }
 }
