--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -37,29 +37,51 @@
             }
         }
 
-        .saveInfo {
+        #auth_buttons_container {
             display: flex;
-            flex-direction: row;
-            align-items: flex-end;
+            flex-direction: column;
+            width: 100%;
 
-            input {
-                width: 20px;
+            #auth_buttons_top {
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: space-between;
+                align-items: center;
+                font-size: 18px;
+
+                @media (max-width: 600px) {
+                    flex-direction: column;
+                    align-items: center;
+                }
+
+                a {
+                    color: blue;
+
+                    &:hover {
+                        cursor: pointer;
+                        text-decoration: underline;
+                    }
+                }
+
+                label {
+                    display: flex;
+                    flex-direction: row;
+
+                    input {
+                        width: 20px;
+                    }
+                }
             }
-        }
 
-        button {
-            width: 150px;
-            font-size: 18px;
-            float: right;
-            align-self: flex-end;
-        }
+            button {
+                margin: 20px 0;
+                width: 150px;
+                font-size: 18px;
+                align-self: flex-end;
 
-        #forgot_pw {
-            color: blue;
-            text-decoration: underline;
-
-            &:hover {
-                cursor: pointer;
+                @media (max-width: 600px) {
+                    align-self: center;
+                }
             }
         }
     }
