--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -164,14 +164,15 @@
             }
         }
     }
-    #recent_videos_container {
+
+    .hpt-content-container {
         background-color: $color1;
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 100%;
 
-        #recent_videos {
+        .hpt-content-inner {
             display: flex;
             width: 100%;
             justify-content: space-between;
@@ -182,7 +183,7 @@
                 justify-content: center;
             }
 
-            .video-placeholder-container {
+            .content-placeholder-container {
                 max-width: 350px;
                 display: flex;
                 flex-direction: column;
