blog page showing data

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,6 +33,7 @@ $footerHeight: 150px;
 @import './admin';
 @import './account';
 @import './auth';
+@import './blogpage';
 @import './contact';
 @import './editor';
 @import './home';
