--- a/src/scss/blogpage.scss
+++ b/src/scss/blogpage.scss
@@ -1,4 +1,44 @@
 #blog_page_container {
     @include insidepage;
     display: flex;
+    flex-direction: column;
+
+    #blog_header_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        h1 {
+            margin-bottom: 5px;
+        }
+    }
+
+    #blog_post_container {
+        width: 90%;
+        margin: 0 auto;
+
+        @media (max-width: 600px) {
+            width: 98%;
+        }
+
+        .fakeAd {
+            clear: both;
+            width: 100%;
+            height: 90px;
+            margin: 10px auto;
+            background-color: black;
+        }
+
+        #blog_image_container {
+            float: right;
+            margin: 0 0 15px 15px;
+            width: 100%;
+            max-width: 400px;
+
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+    }
 }
