--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -184,7 +184,7 @@
             }
 
             .content-placeholder-container {
-                max-width: 350px;
+                width: 350px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
