portfolio page ported over, need to modularize it and the change from css style to sass style

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,6 +38,7 @@ $footerHeight: 150px;
 @import './editor';
 @import './home';
 @import './videopage';
+@import './portfolio';
 
 body {
     padding: 0;
